Fix remaining modernizer suggestions
Signed-off-by: subhramit <subhramit.bb@live.in>