@@ -5,6 +5,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 import org.jabref.logic.importer.fileformat.BibtexParser;
@@ -28,7 +29,7 @@ class BibDatabaseFilesTest {
 
     @Test
     void resolveStrings() throws IOException {
-        try (InputStream stream = Files.newInputStream(Paths.get("src/test/resources/org/jabref/util/twente.bib"));
+        try (InputStream stream = Files.newInputStream(Path.of("src/test/resources/org/jabref/util/twente.bib"));
              InputStreamReader fr = new InputStreamReader(stream, StandardCharsets.UTF_8)) {
             ParserResult result = new BibtexParser(importFormatPreferences).parse(fr);
 
