@@ -99,7 +99,7 @@ class WrapFileLinksTest {
     void path() throws IOException {
         formatter = new WrapFileLinks(List.of(Path.of("src/test/resources/pdfs/")), "");
         formatter.setArgument("\\p");
-        assertEquals(Paths.get("src/test/resources/pdfs/encrypted.pdf").toRealPath().toString(),
+        assertEquals(Path.of("src/test/resources/pdfs/encrypted.pdf").toRealPath().toString(),
                 formatter.format("Preferences:encrypted.pdf:PDF"));
     }
 
@@ -107,7 +107,7 @@ class WrapFileLinksTest {
     void pathFallBackToGeneratedDir() throws IOException {
         formatter = new WrapFileLinks(List.of(), "src/test/resources/pdfs/");
         formatter.setArgument("\\p");
-        assertEquals(Paths.get("src/test/resources/pdfs/encrypted.pdf").toRealPath().toString(),
+        assertEquals(Path.of("src/test/resources/pdfs/encrypted.pdf").toRealPath().toString(),
                 formatter.format("Preferences:encrypted.pdf:PDF"));
     }
 
